--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/file-saver": "^1.3.1",
+    "async": "^2.6.1",
     "core-js": "^2.4.1",
     "express": "^4.16.4",
     "file-saver": "^2.0.0-rc.4",
